--- a/stylesheet.css
+++ b/stylesheet.css
@@ -57,7 +57,7 @@ background-color:white;
 .main{
 color: brown;
 background-color:white;
- margin:10px;
+ margin:5px 10px 10px 10px;
  padding:10px;
 }
 
