--- a/stylesheet.css
+++ b/stylesheet.css
@@ -61,6 +61,48 @@ background-color:white;
  padding:10px;
  border-radius: 5px;
 }
+#footer {
+background-color: #5c755e;
+margin: 10px;
+height: 60px;
+clear:both;
+border-radius: 5px;
+color: #efe5d0;
+text-align: center;
+padding: 15px;
+font-size: 90%;
+}
+ 
+#footer ul   {
+         
+padding: 5px;
+list-style-type: none;
+text-align: center;
+margin: 10px;
+border-radius: 5px;
+ 
+}
+ 
+#footer ul  li  {
+         
+display: inline;
+ 
+}
+ 
+#footer ul li a {
+       
+text-decoration: none;
+font-family:Arial;
+padding: .2em 1em;
+color: #efe5d0;
+background-color: #5c755e;
+}
+ 
+#footer ul li a:hover {
+ 
+color: #000;
+background-color: #fff;
+}
 
 h1{
 font-size: 200%;
