--- a/stylesheet.css
+++ b/stylesheet.css
@@ -69,8 +69,8 @@ padding: 20px;
 width:260px;
 float:left;
 border-radius: 5px;
-margin-left:10px; margin-right:10px; margin-top:0px; margin-bottom:10px;;
-clear:left;
+margin-left:10px; margin-right:10px; margin-top:0px; margin-bottom:10px;
+/*clear:left;*/
 }
 
 #footer {
