--- a/stylesheet.css
+++ b/stylesheet.css
@@ -35,7 +35,7 @@ text-align: center;
 background-color: black;
  
 }
- 
+
 #nav ul li {
    
 display: inline;
@@ -74,6 +74,14 @@ float:left;
 border-radius: 5px;
 margin-left:10px; margin-right:10px; margin-top:0px; margin-bottom:10px;
 /*clear:left;*/
+}
+
+.sideleft ul {
+padding: 5px;
+margin: 10px;
+border-radius: 5px;
+list-style-type: none;
+text-align: center;
 }
 
 #footer {
