--- a/stylesheet.css
+++ b/stylesheet.css
@@ -42,7 +42,7 @@ display: inline;
 
 }
  
-#nav ul li a {
+#nav ul li a, .sideleft ul li a {
 font-family: Arial;   
 text-decoration:none;
 padding: .2em 1em;
@@ -50,7 +50,7 @@ color: white;
 background-color:black; 
 }
  
-#nav a:hover {
+#nav a:hover, .sideleft a:hover {
  
 color: black;
 background-color:white;
